--- a/app/globals.css
+++ b/app/globals.css
@@ -16,16 +16,28 @@ gray: #30343F
   box-sizing: border-box;
 }
 
-main {
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #30343F;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #30343fb4;
+}
+
+.hero {
+  position: relative;
   background-image: linear-gradient(rgba(229, 219, 255, 0.1) .1rem, transparent .1rem),
     linear-gradient(90deg, rgba(229, 219, 255, 0.1) .1rem, transparent .1rem);
   background-size: 20rem 20rem;
+  background-attachment: fixed;
 }
 
 .radial {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   background: radial-gradient(circle at center, transparent 0%, #1E2749 100%);
 }
 
